[package]
name = "deriver"
version = "0.0.1"
authors = ["Aster <192607617@qq.com>"]
description = "Derive more traits for Rust"
repository = "https://github.com/oovm/deriver"
documentation = "https://docs.rs/deriver"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.16", features = ["full"] }
quote = "1.0.27"
proc-macro2 = "1.0.58"

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
